--- a/FluentBlazorTutorial/Components/Layout/NavMenu.razor
+++ b/FluentBlazorTutorial/Components/Layout/NavMenu.razor
@@ -15,6 +15,7 @@
 			<FluentNavLink Href="counter" Icon="@(new Icons.Regular.Size20.NumberSymbolSquare())" IconColor="Color.Accent">Counter</FluentNavLink>
 			<FluentNavLink Href="datagrid" Icon="@(new Icons.Regular.Size32.Database())" IconColor="Color.Accent">DataGrid</FluentNavLink>
 			<FluentNavLink Href="popover" Icon="@(new Icons.Regular.Size32.Database())" IconColor="Color.Accent">Popover</FluentNavLink>
+			<FluentNavLink Href="splitter" Icon="@(new Icons.Filled.Size32.SplitHorizontal())" IconColor="Color.Accent">Splitter</FluentNavLink>
 			<FluentNavLink Href="weather" Icon="@(new Icons.Regular.Size20.WeatherPartlyCloudyDay())" IconColor="Color.Accent">Weather</FluentNavLink>
 			<FluentNavLink Href="auth" Icon="@(new Icons.Regular.Size20.LockClosedKey())" IconColor="Color.Accent">Auth Required</FluentNavLink>
 			<AuthorizeView>
